// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="overview-quality-gate-conditions"
>
  <h4
    className="overview-quality-gate-conditions-section-title"
  >
    quality_gates.conditions.new_code
  </h4>
  <Memo(QualityGateConditions)
    component={
      {
        "failedConditions": [
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
          },
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
          },
        ],
        "ignoredConditions": false,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      }
    }
    failedConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "new_bugs",
          "op": "GT",
        },
      ]
    }
  />
  <h4
    className="overview-quality-gate-conditions-section-title"
  >
    quality_gates.conditions.overall_code
  </h4>
  <Memo(QualityGateConditions)
    component={
      {
        "failedConditions": [
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
          },
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
          },
        ],
        "ignoredConditions": false,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      }
    }
    failedConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "bugs",
          "op": "GT",
        },
      ]
    }
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="overview-quality-gate-conditions"
>
  <h3
    className="overview-quality-gate-conditions-project-name"
  >
    Foo
  </h3>
  <h4
    className="overview-quality-gate-conditions-section-title"
  >
    quality_gates.conditions.new_code
  </h4>
  <Memo(QualityGateConditions)
    component={
      {
        "failedConditions": [
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
          },
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
          },
        ],
        "ignoredConditions": false,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      }
    }
    failedConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "new_bugs",
          "op": "GT",
        },
      ]
    }
  />
  <h4
    className="overview-quality-gate-conditions-section-title"
  >
    quality_gates.conditions.overall_code
  </h4>
  <Memo(QualityGateConditions)
    component={
      {
        "failedConditions": [
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "bugs",
            "op": "GT",
          },
          {
            "actual": "10",
            "error": "0",
            "level": "ERROR",
            "measure": {
              "bestValue": true,
              "leak": "1",
              "metric": {
                "id": "coverage",
                "key": "coverage",
                "name": "coverage",
                "type": "PERCENT",
              },
              "period": {
                "bestValue": true,
                "index": 1,
                "value": "1.0",
              },
              "value": "1.0",
            },
            "metric": "new_bugs",
            "op": "GT",
          },
        ],
        "ignoredConditions": false,
        "key": "foo",
        "name": "Foo",
        "status": "ERROR",
      }
    }
    failedConditions={
      [
        {
          "actual": "10",
          "error": "0",
          "level": "ERROR",
          "measure": {
            "bestValue": true,
            "leak": "1",
            "metric": {
              "id": "coverage",
              "key": "coverage",
              "name": "coverage",
              "type": "PERCENT",
            },
            "period": {
              "bestValue": true,
              "index": 1,
              "value": "1.0",
            },
            "value": "1.0",
          },
          "metric": "bugs",
          "op": "GT",
        },
      ]
    }
  />
</div>
`;
